@@ -10,6 +10,7 @@ Fixed survey activation when survey not active in source
 LimeSurvey equation questions now use help text for question or question code when empty
 A new cron job checks whether the mail cron job has finished correctly
 The check cron job is also checked before each login
+Imports through the interface are logged in the activity log
 The menu remains fully visible when an error occurs
 Staff import now respects organization default user class
 Inserted surveys now have class 'inserted' added to the row in track overview
